# learn_llm

./: .dockerignore  .gitignore  AGENTS.md  BUILD_STATE.yaml  Cargo.toml  DECISIONS.md  Dockerfile  LICENSE  README.md  SKILLS.md  compose.yaml  course
.codex/: README.md  check-orchestration.sh  config.toml
.codex/agents/: chapter_lead.toml  content-author.toml  content-scanner.toml  content_author.toml  learning_researcher.toml  learning_reviewer.toml  locale_activation_lead.toml  localization_author.toml  localization_reviewer.toml  rust_implementer.toml  site_visualization_implementer.toml  validation_runner.toml
.github/workflows/: deploy-pages.yml
curriculum/: README.md  chapter-template.md  course-plan.md
curriculum/chapters/: 01-text-units.md  02-corpus-partitions.md  03-learn-bpe-merges.md  04-apply-bpe-tokenizer.md  05-autoregressive-examples.md  06-bigram-baseline.md  07-language-model-metrics.md  08-tensor-storage.md  09-tensor-views.md  10-broadcasting-reductions.md  11-matrix-multiplication.md  12-stable-softmax.md  13-gradient-checking.md  14-scalar-autodiff.md  15-tensor-autodiff-core.md  16-model-autodiff-ops.md  17-parameter-initialization.md  18-token-embeddings.md  19-linear-layers.md  20-swiglu-feed-forward.md
rust/data/: README.md  splits.json  tiny-bilingual-corpus.txt
rust/demos/ch07-language-model-metrics/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch07-language-model-metrics/examples/: diagram_trace.rs
rust/demos/ch07-language-model-metrics/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch08-tensor-storage/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch08-tensor-storage/examples/: diagram_trace.rs
rust/demos/ch08-tensor-storage/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch09-tensor-views/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch09-tensor-views/examples/: diagram_trace.rs
rust/demos/ch09-tensor-views/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch10-broadcasting-reductions/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch10-broadcasting-reductions/examples/: diagram_trace.rs
rust/demos/ch10-broadcasting-reductions/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch11-matrix-multiplication/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch11-matrix-multiplication/examples/: diagram_trace.rs
rust/demos/ch11-matrix-multiplication/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch12-stable-softmax/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch12-stable-softmax/examples/: diagram_trace.rs
rust/demos/ch12-stable-softmax/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch13-gradient-checking/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch13-gradient-checking/examples/: diagram_trace.rs
rust/demos/ch13-gradient-checking/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch14-scalar-autodiff/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch14-scalar-autodiff/examples/: diagram_trace.rs
rust/demos/ch14-scalar-autodiff/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch15-tensor-autodiff-core/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch15-tensor-autodiff-core/examples/: diagram_trace.rs
rust/demos/ch15-tensor-autodiff-core/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch16-model-autodiff-ops/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch16-model-autodiff-ops/examples/: diagram_trace.rs
rust/demos/ch16-model-autodiff-ops/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch17-parameter-initialization/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch17-parameter-initialization/examples/: diagram_trace.rs
rust/demos/ch17-parameter-initialization/src/: diagram_trace.rs  lib.rs  main.rs
rust/demos/ch18-token-embeddings/: Cargo.toml  diagram-trace.txt  expected.txt
rust/demos/ch18-token-embeddings/examples/: diagram_trace.rs
rust/demos/ch18-token-embeddings/src/: diagram_trace.rs  lib.rs  main.rs
scripts/: chapter-locale-config.mjs  check-chapter-contract.mjs  check-course-cli.sh  check-course-plan.mjs  check-deployment-workflow.mjs  check-host-artifacts.sh  check-rust-demos.sh  check-rust-dependencies.sh  check-site-content.mjs  check-static-links.mjs  locale-config.mjs  validate-in-container.sh
scripts/fixtures/: mock-release-docker.sh
site/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts
site/src/: content.config.ts
site/tests/: 02-corpus-partitions-diagram.test.ts  03-learn-bpe-merges-diagram.test.ts  04-apply-bpe-tokenizer-diagram.test.ts  05-autoregressive-examples-diagram.test.ts  06-bigram-baseline-diagram.test.ts  07-language-model-metrics-diagram.test.ts  08-tensor-storage-diagram.test.ts  09-tensor-views-diagram.test.ts  10-broadcasting-reductions-diagram.test.ts  11-matrix-multiplication-diagram.test.ts  12-stable-softmax-diagram.test.ts  13-gradient-checking-diagram.test.ts  14-scalar-autodiff-diagram.test.ts  15-tensor-autodiff-core-diagram.test.ts  16-model-autodiff-ops-diagram.test.ts  17-parameter-initialization-diagram.test.ts  18-token-embeddings-diagram.test.ts  19-linear-layers-diagram.test.ts  20-swiglu-feed-forward-diagram.test.ts  chapter-locales.test.ts  content-contract.test.ts  (+6 more)
(+178 files in other folders)
