[package]
name = "ch08-tensor-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch08-tensor-storage"
path = "src/main.rs"

[[example]]
name = "ch08-tensor-storage-trace"
path = "examples/diagram_trace.rs"
