[package]
name = "ch09-tensor-views"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch09-tensor-views"
path = "src/main.rs"

[[example]]
name = "ch09-tensor-views-trace"
path = "examples/diagram_trace.rs"
