[package]
name = "ch10-broadcasting-reductions"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch10-broadcasting-reductions"
path = "src/main.rs"

[[example]]
name = "ch10-broadcasting-reductions-trace"
path = "examples/diagram_trace.rs"
