[package]
name = "ch11-matrix-multiplication"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch11-matrix-multiplication"
path = "src/main.rs"

[[example]]
name = "ch11-matrix-multiplication-trace"
path = "examples/diagram_trace.rs"
