[package]
name = "ch12-stable-softmax"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch12-stable-softmax"
path = "src/main.rs"

[[example]]
name = "ch12-stable-softmax-trace"
path = "examples/diagram_trace.rs"
