[package]
name = "ch13-gradient-checking"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch13-gradient-checking"
path = "src/main.rs"

[[example]]
name = "ch13-gradient-checking-trace"
path = "examples/diagram_trace.rs"
