[package]
name = "ch15-tensor-autodiff-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch15-tensor-autodiff-core"
path = "src/main.rs"

[[example]]
name = "ch15-tensor-autodiff-core-trace"
path = "examples/diagram_trace.rs"
