[package]
name = "ch17-parameter-initialization"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch17-parameter-initialization"
path = "src/main.rs"

[[example]]
name = "ch17-parameter-initialization-trace"
path = "examples/diagram_trace.rs"
