[package]
name = "ch18-token-embeddings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llm-from-scratch = { path = "../../crates/llm-from-scratch" }

[lints]
workspace = true

[[bin]]
name = "ch18-token-embeddings"
path = "src/main.rs"

[[example]]
name = "ch18-token-embeddings-trace"
path = "examples/diagram_trace.rs"
